[gd_scene load_steps=14 format=3 uid="uid://cbbl4flw5psj5"]

[ext_resource type="Script" uid="uid://xebexg7ygoai" path="res://scripts/beacon.gd" id="1_gs3bi"]
[ext_resource type="Script" uid="uid://ncsp5efet7lh" path="res://scripts/prism_beacon.gd" id="2_gs3bi"]
[ext_resource type="PackedScene" uid="uid://bagjql0mprpil" path="res://scenes/bullet.tscn" id="3_oeg75"]
[ext_resource type="Texture2D" uid="uid://cjdakpcotbbih" path="res://art/effect area UI proto 1.png" id="4_7fwdv"]
[ext_resource type="Texture2D" uid="uid://3avl1qlj0i44" path="res://art/basic tower proto 2.png" id="5_oaq2h"]
[ext_resource type="Script" uid="uid://bqf70r6vj3a7i" path="res://scripts/mouse_over_display.gd" id="6_jtiyq"]

[sub_resource type="CircleShape2D" id="CircleShape2D_c7lry"]
radius = 100.0

[sub_resource type="CircleShape2D" id="CircleShape2D_gs3bi"]
radius = 120.0

[sub_resource type="CircleShape2D" id="CircleShape2D_m4352"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_oeg75"]
radius = 6.0

[sub_resource type="Animation" id="Animation_jtiyq"]
length = 0.001
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [&""],
"method": &"_on_animation_player_animation_finished"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_oeg75"]
resource_name = "take_damage"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0684905, 0.133781, 0.200351, 0.267561, 0.334131),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.392157), Color(3.02261e-05, 0.355447, 0.980434, 1), Color(1, 1, 1, 0.392157), Color(0.582415, 0.524759, 0.930953, 1), Color(1, 1, 1, 0.392157), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7fwdv"]
_data = {
&"RESET": SubResource("Animation_jtiyq"),
&"take_damage": SubResource("Animation_oeg75")
}

[node name="PrismBeacon" type="StaticBody2D" groups=["beacon"]]
script = ExtResource("1_gs3bi")
beaconType = 4

[node name="Area2D" type="Area2D" parent="." node_paths=PackedStringArray("bulletSpawnPos", "buddyLines")]
script = ExtResource("2_gs3bi")
bullet = ExtResource("3_oeg75")
bulletSpawnPos = NodePath("BulletSpawnPoint")
buddyLines = [NodePath("BuddyOneLine2D"), NodePath("BuddyTwoLine2D")]

[node name="RangeShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_c7lry")

[node name="RangeSprite2D" type="Sprite2D" parent="Area2D/RangeShape2D"]
visible = false
modulate = Color(1, 1, 1, 0.196078)
position = Vector2(7.89762e-06, 0.500004)
scale = Vector2(3.0625, 3.07812)
texture = ExtResource("4_7fwdv")

[node name="AttackTimer" type="Timer" parent="Area2D"]

[node name="BulletSpawnPoint" type="Node2D" parent="Area2D"]
position = Vector2(0, -9)

[node name="PrismBuddiesArea2D" type="Area2D" parent="Area2D"]

[node name="NearbyBeaconRange2D" type="CollisionShape2D" parent="Area2D/PrismBuddiesArea2D"]
shape = SubResource("CircleShape2D_gs3bi")

[node name="BuddyOneLine2D" type="Line2D" parent="Area2D"]
points = PackedVector2Array(0, 0, 0, 0)
width = 4.0

[node name="BuddyTwoLine2D" type="Line2D" parent="Area2D"]
points = PackedVector2Array(0, 0, 0, 0)
width = 4.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 12)
shape = SubResource("CircleShape2D_m4352")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("5_oaq2h")

[node name="DormantTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="MouseOverArea2D" type="Area2D" parent="." node_paths=PackedStringArray("displayNode")]
collision_layer = 16
collision_mask = 16
script = ExtResource("6_jtiyq")
displayNode = NodePath("../Area2D/RangeShape2D/RangeSprite2D")

[node name="MouseOverShape2D" type="CollisionShape2D" parent="MouseOverArea2D"]
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_oeg75")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_7fwdv")
}

[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_body_entered"]
[connection signal="body_exited" from="Area2D" to="Area2D" method="_on_body_exited"]
[connection signal="timeout" from="Area2D/AttackTimer" to="Area2D" method="SpawnBullet"]
[connection signal="body_entered" from="Area2D/PrismBuddiesArea2D" to="Area2D" method="_on_prism_buddies_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D/PrismBuddiesArea2D" to="Area2D" method="_on_prism_buddies_area_2d_body_exited"]
[connection signal="mouse_entered" from="MouseOverArea2D" to="MouseOverArea2D" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="MouseOverArea2D" to="MouseOverArea2D" method="_on_mouse_exited"]
